# file_Manager

./: .gitignore  README.md  db.sqlite3  implementation_plan.md  pyproject.toml  requirements.txt
filemanager/: settings.py  urls.py
files/: admin.py  forms.py  models.py  urls.py  views.py
files/migrations/: 0001_initial.py
media/uploads/: Globalisation.docx
templates/: base.html
templates/files/: file_delete.html  file_list.html  file_upload.html
templates/registration/: logged_out.html  login.html  register.html
