[project]
name = "filemanager"
version = "1.0.0"
description = "A secure file management system built with Django"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "django>=5.1.7",
    "python-magic>=0.4.27",
    "Pillow>=10.2.0",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "django-cleanup>=8.1.0",
    "whitenoise>=6.6.0",
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "filemanager.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
